# monix

./: .coverage  .env.example  .flake8  .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  GET_STARTED.sh  GET_STARTED.txt  README.md  app.py  create_issues.py  deployment.md  pyproject.toml  requirements.txt  reset_db.py  rules.md  setup.sh
.github/workflows/: ci.yml  create-issues.yml
api/: db.py  performance_checker.py  scoring.py  seo_checker.py  server.py
api/analyzers/: threat.py
api/collectors/: __init__.py  connection.py  system.py
api/monitoring/: engine.py  state.py
api/scanners/: __init__.py  web.py
core/config/: __init__.py  asgi.py  middleware.py  settings.py  social_strategy.py  urls.py  wsgi.py
core/core/: settings.py  urls.py
core/reports/: admin.py  apps.py  cloudflare_client.py  cloudflare_views.py  engine_views.py  gsc_client.py  gsc_tokens.py  models.py  persistence.py  scan_proxy.py  scan_service.py  supabase_auth.py  tests.py  views.py
core/reports/management/: __init__.py
core/reports/management/commands/: __init__.py  expire_reports.py
core/reports/migrations/: 0001_initial.py  0002_target_scan_target.py  0003_scan_score_help_text.py  0004_target_environment_default_blank.py  0005_gsc_search_console.py  0006_merge_report_into_scan.py  0007_alter_scan_results.py  0008_user_cloudflare_credentials.py  0009_add_scan_composite_indexes.py
core/scan_engine/: __init__.py  seo_checker.py
core/scan_engine/analyzers/: __init__.py  threat.py  traffic.py
core/scan_engine/collectors/: connection.py  system.py
core/scan_engine/monitoring/: __init__.py  engine.py  state.py
core/scan_engine/scanners/: security.py  web.py
core/scan_engine/utils/: __init__.py  network.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  README.md  web.md
scripts/: create_issues.py  setup-server.sh
supabase/migrations/: 000001_monix_core.sql  000002_monix_user_names.sql
tests/: README.md  conftest.py  test_analyzers_threat.py  test_analyzers_traffic.py  test_api_server.py  test_cloudflare.py  test_collectors_connection.py  test_collectors_system.py  test_db.py  test_django_auth.py  test_django_models.py  test_django_views.py  test_gsc.py  test_monitoring_engine.py  test_monitoring_state.py  test_performance_checker.py  test_scanners_security.py  test_scanners_web.py  test_scoring.py  test_security_hardening.py  test_seo_checker.py
utils/: __init__.py  geo.py  processes.py
web/: .gitignore  AGENTS.md  README.md  biome.json  next.config.ts  package-lock.json  package.json
web/sql/: init.sql
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/_components/: animated-sections.tsx  hero.tsx  map-section.tsx
web/src/app/dashboard/: error.tsx  layout.tsx  loading.tsx  page.tsx
web/src/app/docs/: page.tsx
web/src/app/login/: page.tsx
web/src/app/web/: page.tsx
web/src/components/: Footer.tsx  LiveThreatMap.tsx  Navigation.tsx  ScansWorldMap.tsx  UrlAnalyzer.tsx  WorldMap.tsx  app-sidebar.tsx  cf-metrics.tsx  gsc-metrics.tsx  theme-toggle.tsx
web/src/components/auth/: auth-shell.tsx
web/src/components/dashboard/: chart-card.tsx  empty-state.tsx  header.tsx  metric-card.tsx  score-ring.tsx  section-header.tsx  sidebar.tsx  status-badge.tsx
web/src/components/ui/: breadcrumb.tsx  button.tsx  card.tsx  map.tsx  tabs.tsx
web/src/lib/: api.ts  auth-errors.ts  cf-workspace.ts  feature-flags.test.ts  feature-flags.ts  local-auth.ts  supabase.ts  utils.test.ts
web/src/server/analysis/: analyze-ip.ts  analyze-url-engine.ts  dashboard-payload.ts  threat-catalog.ts
web/src/server/auth/: google-auth.ts  google-signin-state.ts  gsc-oauth-state.ts  jwt.ts  passwords.ts  policy.test.ts  policy.ts  supabase-jwt.test.ts  supabase-jwt.ts
web/src/server/bootstrap/: integrations.ts
web/src/server/config/: feature-flags.ts
web/src/server/crypto/: fernet-tokens.ts
web/src/server/db/: monix-auth-email.ts  monix-data.ts  monix-user.ts  postgres.ts  supabase-admin.ts
web/src/server/domain/: integrations.ts  repositories.ts
web/src/server/engine/: dashboard-payload.ts  (+3 more)
web/src/types/: fernet.d.ts
(+68 files in other folders)
